[Fix]: auto scroll issue when overflow-y happens in mobile/tablet views

--- a/src/app/components/console/console.module.scss
+++ b/src/app/components/console/console.module.scss
@@ -8,9 +8,13 @@
   display: flex;
   flex-direction: column;
   border: 2px solid $selected-gray;
-  overflow-y: scroll;
   transition: all 0.2s ease;
   position: relative;
+
+  >div:last-child {
+    overflow-y: scroll;
+    padding-bottom: 1rem;
+  }
 
   p, span {
     opacity: 1;
